# CRIMAC-KoronaScript

./: KoronaScript.py  MANIFEST.in  README-internals.md  README.md  compare.sh  example_pc.py  requirements.txt  setup.cfg  setup.py  styx-hi-no.md  test.sh
.github/workflows/: python-package.yml  windows-build.yml
KoronaScript/: Configuration.py  KoronaModule.py  Modules.py  __init__.py
KoronaScript/lsss-3.0.0/: LICENSE  README.txt  ReleaseNotes.txt
KoronaScript/lsss-3.0.0/categorization/trainingdatasets/categorizationBasic/: categorization.xml
KoronaScript/lsss-3.0.0/jre/: release
KoronaScript/lsss-3.0.0/korona/: KoronaCli.sh  KoronaRelay.sh
KoronaScript/lsss-3.0.0/korona/config/BroadbandNotchFilters/: BroadbandNotchFilters.xml
KoronaScript/lsss-3.0.0/korona/config/BroadbandSplitterBands/: BroadbandSplitterBands.xml
KoronaScript/lsss-3.0.0/korona/config/HorizontalTransducerOffsets/: HorizontalTransducerOffsets.xml  HorizontalTransducerOffsets_FaroeIslands_FinnurFríði[1001]_20090101.xml  HorizontalTransducerOffsets_Norway_Eros[3578]_20130710.xml  (+17 more)
KoronaScript/lsss-3.0.0/korona/data/: EK500Settings.xml  calibration.xml
KoronaScript/lsss-3.0.0/lib/: FindJava.sh
KoronaScript/lsss-3.0.0/lsss/: LSSS.sh
configuration/: korona-info.json
examples/: TransducerRanges.xml  channelRemoval.py  processFMtestdata.py  pulseCompression.py  readTrackingDatagrams.py  singleEchoDetection.py  testFMtoPC_hi.py  tracking.py  tsDetection.py
paper/: justfile  paper.md  references.bib
tests/: test_examples.py
util/: genmodule.py  rawindex.py  simrad_parsers.py
(+59 files in other folders)
