[metadata]
name = koronascript
version = 3.0.0
author = Ketil Malde
author_email = ketil@malde.org
description = Wrapper around Korona modules for processing echosounder data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CRIMAC-WP4-Machine-learning/CRIMAC-KoronaScript

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    matplotlib
    netCDF4
    xarray
    pytest

[flake8]
ignore = E302,E501,E203,E701


